--- a/scripts/registration_assesment_notebook.ipynb
+++ b/scripts/registration_assesment_notebook.ipynb
@@ -20,7 +20,7 @@
       "version": "3.8.10"
     },
     "colab": {
-      "name": "registration_assesment_v4_3.ipynb",
+      "name": "registration_assesment_notebook.ipynb",
       "provenance": []
     }
   },
@@ -47,10 +47,6 @@
         "import shutil \n",
         "import zipfile\n",
         "from tifffile import imread, imsave\n",
-        "\n",
-        "\n",
-        "#from skimage.io import imread\n",
-        "#import skimage.io\n",
         "\n",
         "\n",
         "\n",
@@ -162,7 +158,7 @@
         "\n",
         "\n",
         "#@markdown ##If not Max_projection, choose the Z plane to analyse\n",
-        "Z_plane =  #@param {type:\"number\"}\n",
+        "Z_plane =  0#@param {type:\"number\"}\n",
         "\n",
         "# -------------------------------- Load the stack --------------------------------\n",
         "\n",
@@ -232,7 +228,6 @@
         "\n",
         "if Analysis_type == \"Max_projection\":\n",
         "  Z_plane = \"\"\n",
-        "\n",
         "\n",
         "\n",
         "for i in os.listdir(Source_folder):\n",
